~theme toggle with prefered dark theme fix; ~keyboard pos fix (previos was causing overflow); ~scaling fix

--- a/src/index.css
+++ b/src/index.css
@@ -3,20 +3,18 @@
 @tailwind utilities;
 
 @layer components {
-  :root, :root.dark {
-    --text-color: theme("colors.text-primary");
-    --bg-color: theme("colors.bg-tertiary");
+  :root {
+    color-scheme: light;
 
-    --navbar-color: theme("colors.bg-primary");
+    --text-color: theme("colors.text-primary-light");
+    --bg-color: theme("colors.bg-tertiary-light");
 
-    --link-color: #646cff;
-    --link-hover-color: #535bf2;
+    --navbar-color: theme("colors.bg-primary-light");
 
-    --btn-bg-color: theme("colors.btn-primary");
-    --btn-hover-bg-color: theme("colors.btn-hovered");
-  }
-  :root.dark {
-    color-scheme: dark;
+    --link-hover-color: #747bff;
+
+    --btn-bg-color: theme("colors.btn-primary-light");
+    --btn-hover-bg-color: theme("colors.btn-hovered-light");
   }
 
   :root {
@@ -25,7 +23,6 @@
     line-height: 24px;
     font-weight: 400;
 
-    color-scheme: dark light;
     background-color: var(--bg-color);
     color: var(--text-color);
     font-synthesis: none;
@@ -85,19 +82,37 @@
     outline: none;
   }
 
+  @media (prefers-color-scheme: dark) {
+    :root:not(.dark) {
+      color-scheme: dark;
+
+      --text-color: theme("colors.text-primary");
+      --bg-color: theme("colors.bg-tertiary");
+
+      --navbar-color: theme("colors.bg-primary");
+
+      --link-color: #646cff;
+      --link-hover-color: #535bf2;
+
+      --btn-bg-color: theme("colors.btn-primary");
+      --btn-hover-bg-color: theme("colors.btn-hovered");
+    }
+  }
+
   @media (prefers-color-scheme: light) {
-    :root {
-      color-scheme: light;
+    :root.dark {
+      color-scheme: dark;
 
-      --text-color: theme("colors.text-primary-light");
-      --bg-color: theme("colors.bg-tertiary-light");
+      --text-color: theme("colors.text-primary");
+      --bg-color: theme("colors.bg-tertiary");
 
-      --navbar-color: theme("colors.bg-primary-light");
+      --navbar-color: theme("colors.bg-primary");
 
-      --link-hover-color: #747bff;
+      --link-color: #646cff;
+      --link-hover-color: #535bf2;
 
-      --btn-bg-color: theme("colors.btn-primary-light");
-      --btn-hover-bg-color: theme("colors.btn-hovered-light");
+      --btn-bg-color: theme("colors.btn-primary");
+      --btn-hover-bg-color: theme("colors.btn-hovered");
     }
   }
 }
